force-app/main/default/objects/Object_Mapping_Layout__c/Object_Mapping_Layout__c.object-meta.xml
<CustomObject>
    <label>Object Mapping Layout</label>
    <nameField>
        <label>Object Mapping Layout Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Object Mapping Layouts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>