force-app/main/default/objects/Object_Mapping_Layout__c/fields/Child_Mappings__c.field-meta.xml
<CustomField>
    <fullName>Child_Mappings__c</fullName>
    <label>Child Mappings</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>