force-app/main/default/objects/Object_Mapping_Layout__c/fields/Parent_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Parent_Mapping__c</fullName>
    <label>Parent Mapping</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>