force-app/main/default/objects/Object_Mapping_Layout__c/fields/Parent_Object_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Parent_Object_Mapping__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Parent Object Mapping</label>
    <referenceTo>Object_Mapping__c</referenceTo>
    <relationshipLabel>Object Mapping Layouts</relationshipLabel>
    <relationshipName>Parent_Object_Mapping_Layouts</relationshipName>
    <type>Lookup</type>
</CustomField>