force-app/main/default/objects/Object_Mapping_Layout__c/fields/Parent_Target_Object_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Target_Object_Api_Name__c</fullName>
    <formula>Parent_Object_Mapping__r.Object_Mapping_Template__r.Target_Object_Api_Name__c</formula>
    <label>Parent Target Object Api Name</label>
    <type>Text</type>
</CustomField>